# adventofcode2020

./: adventofcode2020.cabal  aoc.cabal  day01.hs  day01.lhs  day02.lhs  day02.pl  day03.hs  day03.lhs  day04.hs  day04.lhs  day05.hs  day05.lhs  day06.hs  day06.lhs  day07.hs  day07.lhs  day07.lsh  day08.hs  day08.lhs  day09.hs  day09.lhs  day10.hs  day10.lhs  day11.hs  day11.lhs  day12.hs  day12.lhs  day13.hs  day13.lhs  day14-2.hs  day14.hs  day14.lhs  day15.hs  day15.lhs  day16.lhs  day17.lhs  day18.lhs  day19.lhs  day20.lhs  day21.lhs  (+6 more)
