name:               adventofcode2020
version:            2020
build-type:         Simple
cabal-version:      >= 1.10

library
  build-depends:    base == 4.*
                  , bifunctors >= 5.5.7
                  , containers >= 0.6.2.1
                  , parsec
                  , recursion-schemes
                  , split
  default-language: Haskell2010

executable day11
  main-is: day11.lhs           
  build-depends: base, array, containers, linear
  default-language: Haskell2010
  ghc-options: -Wall

executable day14
  main-is: day14.hs
  build-depends: base, containers, mtl, parsec, text
  ghc-options: -Wall

executable day15
  main-is: day15.lhs
  build-depends: base, containers, mtl
  ghc-options: -Wall

executable day16
  main-is: day16.lhs
  build-depends: base, split
  ghc-options: -Wall

executable day17
  main-is: day17.lhs
  build-depends: base, containers, lens, linear
  ghc-options: -Wall

executable day19
  main-is: day19.lhs
  build-depends: base, containers, parsec, regex-pcre, split
  ghc-options: -Wall

executable day22
  main-is: day22.lhs
  build-depends: base, containers, split
  ghc-options: -Wall

executable day23
  main-is: day23.lhs
  build-depends: base, array
  default-language: Haskell2010
  ghc-options: -Wall

executable day24
  main-is: day24.lhs
  build-depends: base, containers
  default-language: Haskell2010
  ghc-options: -Wall

executable day25
  main-is: day25.lhs
  build-depends: base, modular-arithmetic
  default-language: Haskell2010
  ghc-options: -Wall
