name:               adventofcode2020
version:            2020
build-type:         Simple
cabal-version:      >= 1.10

executable day04
  main-is: day04.lhs
  build-depends: base, split
  default-language: Haskell2010
  ghc-options: -Wall

executable day05
  main-is: day05.lhs
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall

executable day06
  main-is: day06.lhs
  build-depends: base,split
  default-language: Haskell2010
  ghc-options: -Wall

executable day07
  main-is: day07.lhs
  build-depends: base,containers,parsec,recursion-schemes
  default-language: Haskell2010
  ghc-options: -Wall

executable day08
  main-is: day08.lhs
  build-depends: base,containers,transformers
  default-language: Haskell2010
  ghc-options: -Wall

executable day09
  main-is: day09.lhs
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall

executable day10
  main-is: day10.lhs
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall

executable day11
  main-is: day11.lhs           
  build-depends: base, array, containers, linear
  default-language: Haskell2010
  ghc-options: -Wall

executable day12
  main-is: day12.lhs
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall

executable day13
  main-is: day13.lhs
  build-depends: base
  default-language: Haskell2010
  ghc-options: -Wall

executable day14
  main-is: day14.hs
  build-depends: base, containers, mtl, parsec, text
  default-language: Haskell2010
  ghc-options: -Wall

executable day15
  main-is: day15.lhs
  build-depends: base, containers, mtl
  default-language: Haskell2010
  ghc-options: -Wall

executable day16
  main-is: day16.lhs
  build-depends: base, split
  default-language: Haskell2010
  ghc-options: -Wall

executable day17
  main-is: day17.lhs
  build-depends: base, containers, lens, linear
  default-language: Haskell2010
  ghc-options: -Wall

executable day19
  main-is: day19.lhs
  build-depends: base, containers, parsec, regex-pcre, split
  default-language: Haskell2010
  ghc-options: -Wall

executable day22
  main-is: day22.lhs
  build-depends: base, containers, split
  default-language: Haskell2010
  ghc-options: -Wall

executable day23
  main-is: day23.lhs
  build-depends: base, array
  default-language: Haskell2010
  ghc-options: -Wall

executable day24
  main-is: day24.lhs
  build-depends: base, containers
  default-language: Haskell2010
  ghc-options: -Wall

executable day25
  main-is: day25.lhs
  build-depends: base, modular-arithmetic
  default-language: Haskell2010
  ghc-options: -Wall
