name:               Advent of Code 2020
version:            2020
build-type:         Simple
cabal-version:      >= 1.10

library
  build-depends:    base == 4.*
                  , bifunctors >= 5.5.7
                  , containers >= 0.6.2.1
                  , parsec
                  , recursion-schemes
                  , split
  default-language: Haskell2010

executable day11
  main-is: day11.lhs           
  build-depends: base, array, containers, linear
  default-language: Haskell2010
  ghc-options: -Wall

executable day14
  main-is: day14.hs
  build-depends: base, containers, mtl, parsec, text
  ghc-options: -Wall

executable day15
  main-is: day15.hs
  build-depends: base, containers, mtl
  ghc-options: -Wall
